# CmakeLearn

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/chang/cmakelearn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  threadHook.cpp
app/src/main/cpp/linker/: CMakeLists.txt  linker.cpp  sharedlibs.cpp
app/src/main/java/com/chang/cmakelearn/: MainActivity.kt  MyApplication.java  ThreadHook.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/chang/cmakelearn/: ExampleUnitTest.kt
